unpackaged/main/default/objects/ClaimCreatedFromCase__e/ClaimCreatedFromCase__e.object-meta.xml
<CustomObject>
    <description>Transition Intake(case object) documents/files to cve and cvab Claims</description>
    <label>ClaimCreatedFromCase</label>
    <pluralLabel>ClaimCreatedFromCase</pluralLabel>
</CustomObject>