unpackaged/main/default/objects/ClaimCreatedFromCase__e/fields/CvabClaimId__c.field-meta.xml
<CustomField>
    <fullName>CvabClaimId__c</fullName>
    <description>Holds the Cvab Claim Id</description>
    <label>CvabClaimId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>