unpackaged/main/default/objects/ClaimCreatedFromCase__e/fields/CveClaimId__c.field-meta.xml
<CustomField>
    <fullName>CveClaimId__c</fullName>
    <description>Holds the Cve Claim Id</description>
    <label>CveClaimId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>