unpackaged/main/default/objects/ClaimCreatedFromCase__e/fields/IntakeCaseId__c.field-meta.xml
<CustomField>
    <fullName>IntakeCaseId__c</fullName>
    <description>Holds the Case Id</description>
    <label>IntakeCaseId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>