unpackaged/main/default/objects/ClaimCreatedFromCase__e/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <label>UserId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>